# NebulaSys

./: README.md  mirferdos.txt
nebula-dnf/: README.md  package-lock.json  package.json  vite.config.js
nebula-dnf/src/: app.d.ts  app.html  theme.css
nebula-dnf/src-tauri/: Cargo.toml  tauri.conf.json
nebula-dnf/src-tauri/src/: lib.rs  main.rs
nebula-dnf/src/routes/: +page.svelte  UninstallModal.svelte
src-tauri/: Cargo.toml
